# CursorServerDeployer

./: .gitignore  LICENSE  PROJECT_COMPLETION.md  QUICK_START.md  README.md  README_CN.md  list_azure_files.py  pyproject.toml  simple_test.py  test_azure.py  test_azure_download.py  test_basic.py  test_deploy.py  test_deployment_flow.py  test_real_download.py  test_simple.py  交互式菜单修复报告.md  功能验证报告.md  易用性测试报告.md
cursor_server_deployer/: main.py
cursor_server_deployer/cli/: commands.py
cursor_server_deployer/config/: __init__.py
cursor_server_deployer/deploy/: __init__.py  manager.py
cursor_server_deployer/download/: manager.py  strategies.py
cursor_server_deployer/ssh/: __init__.py
cursor_server_deployer/utils/: logger.py
cursor_server_deployer/version/: detector.py
docs/: USAGE_GUIDE.md
scripts/: final_verification.py  fix_console.py  project_summary.py
src/cursor_server_deployer/: __init__.py  __main__.py  main.py
src/cursor_server_deployer/cli/: __init__.py  commands.py
src/cursor_server_deployer/config/: __init__.py  manager.py  models.py
src/cursor_server_deployer/deploy/: __init__.py  manager.py
src/cursor_server_deployer/download/: __init__.py  manager.py  strategies.py
src/cursor_server_deployer/ssh/: __init__.py  connection.py  keys.py
src/cursor_server_deployer/utils/: __init__.py  interactive_menu.py  logger.py
src/cursor_server_deployer/version/: __init__.py  detector.py
tests/: test_basic.py  test_commit_finder.py  test_config.py  test_deploy_manager.py  test_download.py  test_esc_fix.py  test_esc_simple.py  test_final.py  test_http.py  test_interactive_menu.py  test_password_auth.py  test_real.py  test_robust_download.py  test_server_url.py  test_strategies.py
