[project]
name = "cursor-server-deployer"
version = "0.1.0"
description = "Cursor Remote Server Deployment Tool - Download and deploy Cursor server to remote Linux servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Cursor Server Deployer Contributors" }
]
keywords = ["cursor", "remote", "server", "ssh", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "packaging>=23.0",
    "InquirerPy",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "poethepoet>=0.24.0",
]

[project.scripts]
cursor-server-deployer = "cursor_server_deployer.main:app"
csd = "cursor_server_deployer.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/cursor-server-deployer"
Repository = "https://github.com/yourusername/cursor-server-deployer"
Issues = "https://github.com/yourusername/cursor-server-deployer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.poe.tasks]
build = "uv build"
publish = "uv publish"
publish-test = "uv publish --publish-url https://test.pypi.org/legacy/"
version = { cmd = "poetry version $VERSION", help = "Bump version: poe version <VERSION>" }
clean = "rm -rf dist/ build/ *.egg-info .eggs .pytest_cache .mypy_cache .ruff_cache"
test = "pytest"
format = "black src/"
lint = "ruff check src/"
typecheck = "mypy src/"
check-all = ["lint", "typecheck", "test"]
run = "uv run python -m cursor_server_deployer"
